# laurelin

./: .gitignore  Cargo.toml  DESIGN.md  README.md  SECURITY_AUDIT.md  build.rs  deploy-contract  install  laurelin-instance  provision  run-integration-test  run-wallet-integration-test  start-testnet.yml
.github/workflows/: ci.yml
circuit/: Cargo.toml  circuit.go  circuit_test.go  deposit.go  deposit_test.go  go.mod  go.sum  transfer.go  transfer_test.go  withdraw.go  withdraw_test.go
circuit/cmd/checkvk/: main.go
circuit/cmd/client/: bsgs.go  main.go
circuit/cmd/klen/: main.go
circuit/cmd/prove/: main.go
circuit/cmd/pubinputs/: main.go
circuit/setup/: main.go
circuit/src/: deposit.rs  gadgets.rs  lib.rs  transfer.rs  withdraw.rs
contract/: Cargo.toml  build.rs
contract/src/: bjj.rs  groth16.rs  instruction.rs  lib.rs  state.rs
gnark-circuit/: deposit.go  deposit_test.go  go.mod  transfer_test.go  withdraw.go  withdraw_test.go
gnark-circuit/cmd/checkvk/: main.go
gnark-circuit/cmd/client/: main.go
gnark-circuit/cmd/klen/: main.go
gnark-circuit/cmd/prove/: main.go
gnark-circuit/cmd/pubinputs/: main.go
gnark-circuit/setup/: main.go
src/: bjj.rs  bn254.rs  client.rs  deposit_vk_generated.rs  groth16.rs  instruction.rs  lib.rs  state.rs  transfer_vk_generated.rs  withdraw_vk_generated.rs
wallet/: Cargo.toml
wallet/src/: bjj.rs  bn254.rs  config.rs  instructions.rs  lib.rs  main.rs  prover.rs  rpc.rs  wallet.rs
wallet/src/commands/: accounts.rs  balance.rs  config.rs  create_account.rs  deposit.rs  history.rs  init.rs  mod.rs  pubkey.rs  send.rs  stake.rs  token.rs  transfer.rs  withdraw.rs
