[package]
name = "laurelin"
version = "0.1.0"
edition = "2021"

[lib]
name = "laurelin"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.18"
subtle = "2.4"
zeroize = "1.3"
sha2 = { version = "0.10", default-features = false }

[[bin]]
name = "client"
path = "src/client.rs"
required-features = ["client"]

[dependencies.solana-client]
version = "=1.18"
optional = true

[dependencies.solana-sdk]
version = "=1.18"
optional = true

[dependencies.solana-transaction-status]
version = "=1.18"
optional = true

[features]
default = []
client = ["solana-client", "solana-sdk", "solana-transaction-status"]
