[workspace]
members = ["contract", "wallet", "circuit"]
resolver = "2"

[workspace.dependencies]
# Ark ecosystem
ark-bn254       = "0.4"
ark-ed-on-bn254 = { version = "0.4", features = ["r1cs"] }
ark-ff          = "0.4"
ark-ec          = "0.4"
ark-std         = { version = "0.4", features = ["std"] }
ark-relations   = "0.4"
ark-r1cs-std    = "0.4"
ark-groth16     = "0.4"
ark-snark       = "0.4"
ark-serialize   = "0.4"

# Solana
solana-program             = "=1.18"
solana-client              = "=1.18"
solana-sdk                 = "=1.18"
solana-transaction-status  = "=1.18"
solana-account-decoder     = "=1.18"
spl-token                  = "=4.0"
spl-associated-token-account = "=2.3"

# Common
anyhow     = "1"
rand       = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize    = "1.3"
bs58       = "0.5"

# Internal
laurelin-circuit = { path = "circuit" }
