[package]
name = "laurelin-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254      = "0.4"
ark-ed-on-bn254 = { version = "0.4", features = ["r1cs"] }
ark-ff         = "0.4"
ark-ec         = "0.4"
ark-std        = { version = "0.4", features = ["std"] }
ark-relations  = "0.4"
ark-r1cs-std   = "0.4"
ark-groth16    = "0.4"
ark-snark      = "0.4"
ark-serialize  = "0.4"
anyhow         = "1"
rand           = "0.8"

[[bin]]
name = "laurelin-setup"
path = "src/bin/setup.rs"
