[package]
name = "laurelin-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254.workspace       = true
ark-ed-on-bn254.workspace = true
ark-ff.workspace          = true
ark-ec.workspace          = true
ark-std.workspace         = true
ark-relations.workspace   = true
ark-r1cs-std.workspace    = true
ark-groth16.workspace     = true
ark-snark.workspace       = true
ark-serialize.workspace   = true
anyhow.workspace          = true
rand.workspace            = true

[[bin]]
name = "laurelin-setup"
path = "src/bin/setup.rs"
