[package]
name = "laurelin-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "laurelin-wallet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
rand = "0.8"
ark-bn254 = "0.4"
ark-ed-on-bn254 = { version = "0.4", features = ["r1cs"] }
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = { version = "0.4", features = ["std"] }
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-serialize = "0.4"
laurelin-circuit = { path = "../circuit" }
solana-client = "=1.18"
solana-sdk = "=1.18"
solana-transaction-status = "=1.18"
solana-account-decoder = "=1.18"
dirs = "5"
bs58 = "0.5"
zeroize = "1.3"
argon2 = "0.5"
aes-gcm = "0.10"
rpassword = "7"
spl-token = "=4.0"
spl-associated-token-account = "=2.3"
