[package]
name = "laurelin-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "laurelin-wallet"
path = "src/main.rs"

[[bin]]
name = "laurelin-integration-test"
path = "src/bin/integration_test.rs"

[dependencies]
# Ark
ark-bn254.workspace       = true
ark-ed-on-bn254.workspace = true
ark-ff.workspace          = true
ark-ec.workspace          = true
ark-std.workspace         = true
ark-groth16.workspace     = true
ark-snark.workspace       = true
ark-serialize.workspace   = true

# Solana
solana-client.workspace              = true
solana-sdk.workspace                 = true
solana-transaction-status.workspace  = true
solana-account-decoder.workspace     = true
spl-token.workspace                  = true
spl-associated-token-account.workspace = true

# Common
anyhow.workspace     = true
rand.workspace       = true
serde.workspace      = true
serde_json.workspace = true
zeroize.workspace    = true
bs58.workspace       = true

# Internal
laurelin-circuit.workspace = true

# Wallet-specific
clap = { version = "4", features = ["derive"] }
hex = "0.4"
dirs = "5"
argon2 = "0.5"
aes-gcm = "0.10"
rpassword = "7"
